--- a/Portfolio.html
+++ b/Portfolio.html
@@ -36,14 +36,24 @@
     <main>
         <section class="projetoSatefyTW">
             <h2> SafetyTW</h2>
+            <img class="imagens_projeto" src="tela_inicial.png" alt="telaInicial">
+            <section class="linguagens_1">
+                <img class="iconesHtmlECss" src="html.png" alt="html">
+                <img class="iconesHtmlECss" src="css.png" alt="css">
+            </section>
         </section>
         <section class="projetoEmprestimos">
             <h2> Simulador de emprestimos </h2>
+            <img class="imagens_projeto" src="tela_cadastro.png" alt="telacadastro">
         </section>
         <section class="projetoEVO">
             <h2> EVO </h2>
+            <img class="imagens_projeto" src="tela_suporte.png" alt="telasuporte">
         </section>
     </main>
+
+
+    
     
 
 
